# wasaclip

./: .gitignore  README.md  pyproject.toml
examples/: ip.py  numbers.py  uppercase.py
src/wasaclip/: __init__.py  main.py
